--- a/client/src/components/browse/Placeoffer.scss
+++ b/client/src/components/browse/Placeoffer.scss
@@ -66,7 +66,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 2.5%;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 .tradeimg {
   width: 9vw;
@@ -138,7 +138,7 @@ button .login-button {
 }
 .placeoffer-button {
   border-radius: 20px;
-  font-family:'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   color: white;
 }
 #button-offer {
@@ -171,7 +171,7 @@ button .login-button {
   position: relative;
   display: flex;
   align-items: center;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 .placeoffer-mylisting {
   position: relative;
@@ -191,7 +191,7 @@ button .login-button {
 .my-shoes-size {
   font-size: 1.2rem;
   margin-bottom: 3%;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 @keyframes slide-up-noop {
   from {
