--- a/client/src/components/MyAccount/MyListings.scss
+++ b/client/src/components/MyAccount/MyListings.scss
@@ -64,7 +64,7 @@
   top: -41%;
 
   button {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     color: white;
     position: relative;
     font-weight: 700;
@@ -77,7 +77,7 @@
     background-color: navy;
     border: none;
     &:hover {
-      background-color: #E60023;
+      background-color: #e60023;
     }
   }
 }
@@ -126,7 +126,7 @@
   flex-direction: column;
 }
 .btn-primary {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   background-color: #f15025;
   border-radius: 11.5px;
   font-weight: 700;
