--- a/client/src/components/MyAccount/Profile.scss
+++ b/client/src/components/MyAccount/Profile.scss
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -9,8 +8,7 @@
   color: black;
   padding-top: 0px;
   display: flex;
-  align-items:center;
- 
+  align-items: center;
 }
 .profile-body {
   display: flex;
@@ -18,30 +16,31 @@
   align-items: center;
   height: 100vh;
   background-color: #071522;
-} 
+}
 
 .profile-form {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   position: relative;
   z-index: 2;
-  margin-top:20%;
+  margin-top: 20%;
   margin-bottom: 15%;
-  background-color: white ;
-  padding:4%;
+  background-color: white;
+  padding: 4%;
   border-radius: 25px;
   animation: slide 1.3s ease-out;
 }
 .profile-form h1 {
-  text-align: center; 
-  margin-bottom: 5% ;
-
+  text-align: center;
+  margin-bottom: 5%;
 }
 .int-area {
   width: 400px;
-    position: relative;
-    margin-top: 5%;
+  position: relative;
+  margin-top: 5%;
 }
-.int-area:first-child{margin-top: 0;}
+.int-area:first-child {
+  margin-top: 0;
+}
 .int-area input {
   width: 100%;
   padding: 5% 2.5% 2.5%;
@@ -49,45 +48,41 @@
   border: 1px solid black;
   border-radius: 7px;
   font-size: 18px;
-  color:black;
+  color: black;
 }
 .int-area label {
   position: absolute;
   left: 10px;
-  top:15px; 
+  top: 15px;
   font-size: 18px;
-  color: #000000 ;
-  transition: top .4s ease;
-} 
+  color: #000000;
+  transition: top 0.4s ease;
+}
 .int-area input:focus + label,
 .int-area input:valid + label {
-  top:0px;
+  top: 0px;
   font-size: 13px;
   color: navy;
- 
 }
 
 .btn-area button {
   width: 100%;
-  height: 50px ;
+  height: 50px;
   font-size: 20px;
   border: none;
   border-radius: 25px;
   background: black;
-  color: white ;
-  cursor:pointer;
+  color: white;
+  cursor: pointer;
 }
 
 @keyframes slide {
-  from{
-    top:-300px;
+  from {
+    top: -300px;
     opacity: 0;
-
   }
-  to{
-    top:0px;
+  to {
+    top: 0px;
     opacity: 1;
-
   }
-  
 }
