--- a/client/src/components/landingpage/Landingpage.scss
+++ b/client/src/components/landingpage/Landingpage.scss
@@ -7,15 +7,15 @@ video {
   left: 0;
   pointer-events: none;
 }
-.home-button{
+.home-button {
   border-radius: 12px;
-  border:none;
-  background-color: #EA7317;
+  border: none;
+  background-color: #ea7317;
   color: white;
   &:hover {
     transform: scale(1.15);
     transition: 0.6s;
-    background-color: #EA7317;
+    background-color: #ea7317;
   }
 }
 
@@ -26,25 +26,24 @@ html {
 
 .viewport-header {
   position: relative;
-  top:5rem;
+  top: 5rem;
   height: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
   margin-top: 13%;
   margin-bottom: 25%;
-  font-family: 'Roboto Condensed', sans-serif;
-    h1 {
-      font-size: 4.5vw;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 150px;
-     
-    }
+  font-family: "Roboto Condensed", sans-serif;
+  h1 {
+    font-size: 4.5vw;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 150px;
+  }
 }
-.landing-h2{
+.landing-h2 {
   position: relative;
-  top:1.2rem;
+  top: 1.2rem;
 }
 
 main {
@@ -61,7 +60,6 @@ main {
 .scroll-us {
   min-height: 90px;
   background-color: transparent;
-
 }
 
 .about-us {
@@ -78,31 +76,28 @@ main {
   height: 90vh;
   color: white;
   justify-content: space-between;
-  table-layout: fixed ;
-  width: 100% ;
+  table-layout: fixed;
+  width: 100%;
   background-color: #071522;
 }
-.landingpage-h3{
-  color: #FEC601;
+.landingpage-h3 {
+  color: #fec601;
 }
 
 .about-us-text {
   justify-content: center;
   display: flex;
   flex-direction: column;
-  width: 50% ;
+  width: 50%;
   margin-left: 2%;
-  font-family: 'Roboto Condensed', sans-serif;
-
+  font-family: "Roboto Condensed", sans-serif;
 
   h2 {
     font-size: 4.4rem;
     font-weight: 600;
-    
   }
-  
 }
-.about-us-explanation{
+.about-us-explanation {
   font-size: 1.4rem;
 }
 
@@ -114,7 +109,6 @@ main {
 .scroll-contact {
   min-height: 85px;
   background-color: transparent;
-
 }
 
 .contact-us {
@@ -126,7 +120,7 @@ main {
 }
 
 .contact-us-description {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   position: relative;
   background: #011638;
   width: 100%;
@@ -138,30 +132,30 @@ main {
 .card {
   width: 25%;
 }
-.contact-us-img{
+.contact-us-img {
   position: relative;
   height: 65vh;
   width: 46vw;
-  top:-21vh;
-  left:4vw;
+  top: -21vh;
+  left: 4vw;
   border-radius: 15px;
 }
-.contact-us-container{
+.contact-us-container {
   display: flex;
   flex-direction: column;
   position: relative;
   margin-left: 18%;
-  top:-21vh;
-  gap:5%;
-  h1{
-    color:#FEC601;
+  top: -21vh;
+  gap: 5%;
+  h1 {
+    color: #fec601;
   }
 }
 
-#contact-us-text{
-  margin-left:4%;
+#contact-us-text {
+  margin-left: 4%;
   font-size: 1.4rem;
 }
-.contact-us-icon{
+.contact-us-icon {
   margin-bottom: 1%;
 }
