--- a/client/src/components/loginpage/Login.scss
+++ b/client/src/components/loginpage/Login.scss
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +16,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #071522
+  background-color: #071522;
 }
 
 .login-form {
@@ -29,7 +28,7 @@
   padding: 4%;
   border-radius: 25px;
   animation: slide 1.3s ease-out;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 .login-form h1 {
   font-size: 35px;
@@ -88,7 +87,7 @@
   margin-top: 20px;
   text-align: center;
 }
-.caption-err{
+.caption-err {
   color: red;
   margin-top: 20px;
   text-align: center;
