changed colors in background

--- a/client/src/components/browse/ListingItem.scss
+++ b/client/src/components/browse/ListingItem.scss
@@ -42,7 +42,7 @@
     background-color: navy;
     border: none;
     &:hover {
-      background-color: #ea7317;
+      background-color: #e60023;
     }
   }
 }
