--- a/client/src/components/MyAccount/Offers.scss
+++ b/client/src/components/MyAccount/Offers.scss
@@ -155,6 +155,7 @@
 }
 
 .acceptofferbutton {
+  border: none;
   font-weight: 700;
   font-size: 1.2rem;
   height: 4rem;
@@ -173,6 +174,7 @@
 }
 
 .declineofferbutton {
+  border:none;
   font-weight: 700;
   font-size: 1.2rem;
   height: 4rem;
