--- a/client/src/components/chat/Mymessages.scss
+++ b/client/src/components/chat/Mymessages.scss
@@ -4,3 +4,13 @@
   display: flex;
   padding-top: 8rem;
 }
+
+.chat-menu-input{
+   border-radius: 20px;
+}
+
+
+.chat-menu-wrapper,
+.chat-box-wrapper {
+  height: 100%;
+}
