--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,32 +1,28 @@
-.nav-bar{
-  background-color:#071522;
-  font-family: 'Roboto Condensed', sans-serif;
+.nav-bar {
+  background-color: #071522;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 1.15rem;
-  
 }
-.nav-elms :hover{
-color:#071522;
-}
+
 .navbar-dark .navbar-nav .nav-link {
   color: white;
 }
 .navbar-dark .navbar-nav .nav-link:hover {
-  color :#ea7317;
+  color: #ea7317;
 }
 
 .username {
-  display: flex;  
+  display: flex;
   margin-top: 1%;
   justify-content: center;
   font-size: 0.8rem;
-  
 }
 
-.nav-elms{
+.nav-elms {
   display: flex;
   margin-right: 2rem;
 }
-.logoname{
+.logoname {
   margin-left: 1.5rem;
 }
 
@@ -35,6 +31,8 @@ color:#071522;
   height: 1.5rem;
   position: relative;
   top: 18%;
-  color: #F80B0B;
-
+  color: #f80b0b;
+}
+.notificationIcon:hover {
+  color: #ea7317;
 }
